add uploadPhoto()
