# fantastic-coffee-decaffeinated/service/api/api-handler.go
@@ -12,9 +12,10 @@ func (rt *_router) Handler() http.Handler {
 
 	rt.router.POST("/session", rt.doLogin)
 
-	rt.router.POST("/profiles", rt.setMyUsername)
+	rt.router.POST("/profiles/:username", rt.setMyUsername)
 
-	rt.router.POST("/profiles/:username/photos/:idPhoto", rt.uploadPhoto)
+	//rt.router.POST("/profiles/:username/photos/:idPhoto", rt.uploadPhoto)
+	rt.router.POST("/profiles/:username/photos", rt.uploadPhoto)
 
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
